# adversarial-attack

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
src/: add_adversarial_noise.py  plotting.py  schemas.py  utils.py
src/imagenet_dataset/: class_idx_value_mapping.json
tests/: test_add_adversarial_noise.py
