[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-attack"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "pillow",
    "torchvision"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pip-tools"
]

[project.urls]
Repository = "https://github.com/rsundar96/adversarial-attack.git"

[tool.ruff]
target-version = "py39"
