[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-attack"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "matplotlib",
    "pillow",
    "torchvision",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pip-tools",
    "pytest"
]

[project.urls]
Repository = "https://github.com/rsundar96/adversarial-attack.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
